2003-05-11 Roberto Raggi <roberto@kdevelop.org>
    * autoproject: don't write empty variables in Makefile.am
    * autoproject: implemented the remove subproject feature
    * autoproject: improved add subprojects
    * autoproject: create a (default) noinst_HEADERS target

2003-05-05 Alexander Dymo <cloudtemple@mksat.net>
    * parts/trollproject
      MOC_DIR, UI_DIR, OBJECTS_DIR variables support in configuration dialog is back again.
      Fixed incorrect program path generation that prevented from running the application.
      Put correct actions into the Build menu and the Build toolbar.
    * parts/clearcase
      Applied further modifications by Ajay Guleria <Ajay.Guleria@synopsys.com>.

2003-04-18 Oliver Kellogg <okellogg@users.sourceforge.net>
    * Implemented Ada language support including adasupport part, adaproject
      part, filecreate templates, application wizard template, syntax
      highlighting and indentation in qeditor.
      Kudos to Alex Dymo (pascalsupport) and Robe Raggi (javasupport), on
      whose work this is based.

2003-05-01 Jens Dagerbo <jens.dagerbo@swipnet.se>
    * Changed closerpart to work on KURLs. Also moved it into Core scope.

2003-04-30 Jens Dagerbo <jens.dagerbo@swipnet.se>
    * Added "Core" scope plugins alternative
    * Updated the plugin selection to be more userfriendly

2003-04-29 Amilcar Lucas <a.lucas@tu-bs.de>
    * Made the Working Directory of the debugged executable configurable
    (Finally you can run your application on it's directory, instead of $HOME)

2003-04-27 Alexander Dymo <cloudtemple@mksat.net>
    * Regexp tester now has "Edit" button that uses KRegExpEditor
    * Added free pascal oriented templates - GTK+ application and shared library
    * Implemented "Run options" (envvars, program arguments) for pascal project manager

2003-04-26 Alexander Dymo <cloudtemple@mksat.net>
    * Implemented all documented compiler options in free pascal compiler plugin.
