@@ -20,7 +20,7 @@ public:
 
 protected:
     Features features ();
-    QStringList fileFilters ();
+    KMimeType::List mimeTypes ();
     QStringList fileExtensions ();
 
 private slots:
