@@ -28,7 +28,7 @@ public:
 
 protected:
     virtual Features features();
-    virtual QStringList fileFilters();
+    virtual KMimeType::List mimeTypes();
     
 private slots:
     void projectConfigWidget(KDialogBase *dlg);
