@@ -30,7 +30,7 @@ public:
 
 protected:
     virtual Features features();
-    virtual QStringList fileFilters();
+    virtual KMimeType::List mimeTypes();
 
 private slots:
     void slotRun();
